--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,12 @@
 			<artifactId>apache-any23-encoding</artifactId>
 			<version>1.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.22</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
